--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^1.0.0",
+    "@nuxtjs/axios": "^5.0.0",
+    "dotenv": "^6.0.0",
     "express": "^4.15.3",
-    "@nuxtjs/axios": "^5.0.0"
+    "js-cookie": "^2.2.0",
+    "nuxt": "^1.0.0",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "cross-env": "^5.0.1",
