--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.15.3",
     "js-cookie": "^2.2.0",
     "nuxt": "^1.0.0",
+    "sweetalert": "^2.1.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
   },
